k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartovate-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smartovate-backend
  template:
    metadata:
      labels:
        app: smartovate-backend
    spec:
      containers:
      - name: backend
        image: 905418230821.dkr.ecr.eu-north-1.amazonaws.com/smartovate_repo:latest
        ports:
        - containerPort: 8000
