k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - dev.smartovate.io
    secretName: smartovate-tls
  rules:
  - host: dev.smartovate.net
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: smartovate-backend-service
            port:
              number: 80
